feat: update dashboard-backend readme, add badge API
