# dashboard-backend/docs/swagger.json
@@ -94,14 +94,21 @@
         }
       }
     },
-    "/api/v1/badge/{cardId}": {
+    "/api/v1/badge/{cardUid}": {
       "put": {
         "description": "",
         "operationId": "register_badge",
         "parameters": [
           {
-            "name": "cardId",
+            "name": "cardUid",
             "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "[0-9a-fA-F]{8}"
+          },
+          {
+            "name": "X-API-KEY",
+            "in": "header",
             "required": true,
             "type": "string"
           },
@@ -128,6 +135,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         },
         "security": [
@@ -147,14 +157,21 @@
         }
       }
     },
-    "/api/v1/badge/popcat/{cardId}": {
+    "/api/v1/badge/popcat/{cardUid}": {
       "put": {
         "description": "",
         "operationId": "put_badge_popcat",
         "parameters": [
           {
-            "name": "cardId",
+            "name": "cardUid",
             "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "[0-9a-fA-F]{8}"
+          },
+          {
+            "name": "X-API-KEY",
+            "in": "header",
             "required": true,
             "type": "string"
           },
@@ -166,7 +183,7 @@
               "properties": {
                 "score": {
                   "type": "number",
-                  "example": 10
+                  "example": 10.5
                 }
               },
               "required": [
@@ -181,6 +198,72 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/api/v1/badge/dino": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/badge/dino/{cardUid}": {
+      "put": {
+        "description": "",
+        "operationId": "put_badge_dino",
+        "parameters": [
+          {
+            "name": "cardUid",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "[0-9a-fA-F]{8}"
+          },
+          {
+            "name": "X-API-KEY",
+            "in": "header",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "score": {
+                  "type": "number",
+                  "example": 10.5
+                }
+              },
+              "required": [
+                "score"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         },
         "security": [
@@ -200,14 +283,21 @@
         }
       }
     },
-    "/api/v1/badge/emoji/{cardId}": {
+    "/api/v1/badge/emoji/{cardUid}": {
       "post": {
         "description": "",
         "operationId": "post_badge_emoji",
         "parameters": [
           {
-            "name": "cardId",
+            "name": "cardUid",
             "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "[0-9a-fA-F]{8}"
+          },
+          {
+            "name": "X-API-KEY",
+            "in": "header",
             "required": true,
             "type": "string"
           },
@@ -239,6 +329,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
